fix: anim on mobile img

--- a/assets/css/sass/components/carousel.scss
+++ b/assets/css/sass/components/carousel.scss
@@ -19,8 +19,11 @@
 .slide-right-leave-active {
   animation: slideOutRight 0.5s ease;
   position: absolute;
-  top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
   right: 0;
+  top: 0;
 }
 
 @keyframes slideInRight {
@@ -50,8 +53,11 @@
 .slide-left-leave-active {
   animation: slideOutleft 0.5s ease;
   position: absolute;
-  top: 0;
+  margin-left: auto;
+  margin-right: auto;
   left: 0;
+  right: 0;
+  top: 0;
 }
 
 @keyframes slideInleft {
